[gd_scene load_steps=13 format=3 uid="uid://dewexmnyk7otn"]

[ext_resource type="Script" uid="uid://dq14emo1iu048" path="res://shop/upgrade_book/upgrade_book.gd" id="1_2q2ey"]
[ext_resource type="Texture2D" uid="uid://psomt7buxqip" path="res://assets/art/upgrades/book/Open_book_blank.png" id="1_qo7ku"]
[ext_resource type="Texture2D" uid="uid://kmiivpgoeobo" path="res://assets/art/upgrades/book/Back_Normal.png" id="2_2q2ey"]
[ext_resource type="Resource" uid="uid://6mawpae7apr7" path="res://core/pony_stats.tres" id="2_cxhan"]
[ext_resource type="Texture2D" uid="uid://b6w4ptj5c3qso" path="res://assets/art/upgrades/book/Back_Press.png" id="3_ks1ea"]
[ext_resource type="PackedScene" uid="uid://buk8y05uqosfs" path="res://shop/upgrade_component.tscn" id="3_ll3wv"]
[ext_resource type="Texture2D" uid="uid://iw06ek8udrbr" path="res://assets/art/upgrades/book/Back_Hover.png" id="4_22r1i"]
[ext_resource type="Texture2D" uid="uid://bl2nii174xj5a" path="res://assets/art/upgrades/book/icons/Page_Arrow.png" id="6_ks1ea"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ayxug"]
bg_color = Color(0.984314, 0.980392, 0.764706, 1)
border_width_left = 22
border_width_top = 22
border_width_right = 22
border_color = Color(0.996078, 0.741176, 0.309804, 1)
border_blend = true

[sub_resource type="Animation" id="Animation_mpcpy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DescPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(439, 1135.76)]
}

[sub_resource type="Animation" id="Animation_ayxug"]
resource_name = "toggle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DescPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(439, 1135.76), Vector2(439, 958)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mgxne"]
_data = {
&"RESET": SubResource("Animation_mpcpy"),
&"toggle": SubResource("Animation_ayxug")
}

[node name="UpgradeBook" type="Panel" node_paths=PackedStringArray("clickables", "item_desc", "animator")]
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2q2ey")
clickables = [NodePath("BookTexture/BookBack"), NodePath("BookTexture/BookNext"), NodePath("BookTexture/BookPrevious")]
pony_stats = ExtResource("2_cxhan")
item_desc = NodePath("DescPanel/Desc")
animator = NodePath("BookAnim")
upgrade_component_scene = ExtResource("3_ll3wv")

[node name="BookTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -364.0
offset_right = 640.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qo7ku")

[node name="BookBack" type="TextureButton" parent="BookTexture"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.5
offset_top = 89.0
offset_right = 237.5
offset_bottom = 252.0
grow_horizontal = 0
texture_normal = ExtResource("2_2q2ey")
texture_pressed = ExtResource("3_ks1ea")
texture_hover = ExtResource("4_22r1i")

[node name="BookNext" type="TextureButton" parent="BookTexture"]
layout_mode = 0
offset_left = 1193.5
offset_top = 796.0
offset_right = 1336.5
offset_bottom = 855.0
texture_normal = ExtResource("6_ks1ea")

[node name="BookPrevious" type="TextureButton" parent="BookTexture"]
layout_mode = 0
offset_left = 88.5
offset_top = 780.0
offset_right = 231.5
offset_bottom = 839.0
texture_normal = ExtResource("6_ks1ea")
flip_h = true

[node name="Pages" type="Control" parent="BookTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 173.0
offset_top = 85.0
offset_right = -253.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Moneys" type="Control" parent="BookTexture"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 114.0
offset_top = 113.0
offset_right = -113.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="BookTexture/Moneys"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
text = "this is page 4"

[node name="DescPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -521.0
offset_top = 55.76
offset_right = 521.0
offset_bottom = 232.76
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ayxug")

[node name="Desc" type="Label" parent="DescPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.678431, 0.223529, 0.00392157, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "[This is the item description, you can tell because it is describing something]"
autowrap_mode = 3

[node name="BookAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mgxne")
}
